test-cases/negative/test_107_import_nonexistent.lay
# negative test: importing non-existent file
# expected: resolver should catch this

import utils from './nonexistent_file.lay'


